Completed all of the easy required changes from Digsy  * Screen 2 text  * Screen 3 text, centering  * Screen 5 text, centering  * Screen 6 text, centering  * Screen 7 text  * Screen 8 text  * Screen 9 text  * Screen 10 text  * Screen 12 text  * Initial allocation - added axis, prevent next until allocation submitted, text, centering  * Block decryption test once one round completed  * Rename total wealth to investment value  * Relocate wealth and time labels along bottom  * Add encrypted/decrypted labels to decryption widget  * Added final score screen

--- a/MarketSimulation/decryptionwindow.ui
+++ b/MarketSimulation/decryptionwindow.ui
@@ -88,7 +88,7 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>200</width>
+           <width>500</width>
            <height>60</height>
           </size>
          </property>
@@ -102,6 +102,38 @@
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <widget class="QWidget" name="widget_2" native="true">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>0</height>
+             </size>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_2">
+             <item>
+              <widget class="QLabel" name="label_2">
+               <property name="text">
+                <string>Encrypted:</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLabel" name="label_3">
+               <property name="text">
+                <string>Decrypted:</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
           <item>
            <layout class="QGridLayout" name="guessGrid">
             <property name="sizeConstraint">
