--- a/MarketSimulation/initialallocationscreen.ui
+++ b/MarketSimulation/initialallocationscreen.ui
@@ -15,17 +15,21 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+    <widget class="QWidget" name="plotWidget" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
-     <property name="sizeHint" stdset="0">
+     <property name="minimumSize">
       <size>
-       <width>218</width>
-       <height>219</height>
+       <width>0</width>
+       <height>100</height>
       </size>
      </property>
-    </spacer>
+     <layout class="QHBoxLayout" name="horizontalLayout_9"/>
+    </widget>
    </item>
    <item>
     <widget class="QFrame" name="frame">
@@ -260,7 +264,7 @@
              </font>
             </property>
             <property name="text">
-             <string>Total Wealth:</string>
+             <string>Investment Value:</string>
             </property>
            </widget>
           </item>
@@ -305,18 +309,62 @@ Allocation</string>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label">
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-      </font>
+    <widget class="QWidget" name="widget" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>20</height>
+      </size>
      </property>
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Here you can set your initial allocation between Asset 1 and Asset 2 by moving the slider and then clicking Submit Allocation.&lt;/p&gt;&lt;p&gt;DO NOT CLICK NEXT UNTIL INSTRUCTED &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_7">
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="minimumSize">
+         <size>
+          <width>600</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You must now set your initial allocation between Asset 1 and Asset 2 by moving the slider and then clicking Submit Allocation. &lt;/p&gt;&lt;p&gt;The Next button will become enabled once you have submitted your allocation.&lt;/p&gt;&lt;p&gt;DO NOT CLICK NEXT UNTIL INSTRUCTED &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_5">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
