--- a/MarketSimulation/instructionscreen4.ui
+++ b/MarketSimulation/instructionscreen4.ui
@@ -50,13 +50,19 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>600</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="font">
         <font>
          <pointsize>12</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Well done!&lt;/p&gt;&lt;p&gt;You may change your allocation at any time. Once the experiment is complete you will be paid your total wealth. &lt;/p&gt;&lt;p&gt;You are also able to earn money by completing a decryption task. In the decryption task you will use a decryption key to decipher an encrypted word. Each decryption you complete will add 15 cents to your final payment.&lt;/p&gt;&lt;p&gt;The decryption task will be completed on a screen similar to the one shown on the next page. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Well done!&lt;/p&gt;&lt;p&gt;You may change your allocation at any time. Once the experiment is complete you will be paid your investment value. &lt;/p&gt;&lt;p&gt;You are also able to earn money by completing a decryption task. In the decryption task you will use a decryption key to decipher an encrypted word. Each decryption you complete will add 15 cents to your final payment.&lt;/p&gt;&lt;p&gt;The task will be completed on a screen like the one shown on the next page. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
