--- a/MarketSimulation/instructionscreentest2.ui
+++ b/MarketSimulation/instructionscreentest2.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>692</width>
+    <width>747</width>
     <height>513</height>
    </rect>
   </property>
@@ -261,7 +261,7 @@
              </font>
             </property>
             <property name="text">
-             <string>Total Wealth:</string>
+             <string>Investment Value:</string>
             </property>
            </widget>
           </item>
@@ -306,17 +306,62 @@ Allocation</string>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label">
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-      </font>
+    <widget class="QWidget" name="widget" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>20</height>
+      </size>
      </property>
-     <property name="text">
-      <string>The prices have changed and so has your total wealth!
-Reallocate your wealth. Set the slider to 75% in Asset 2 and 25% in Asset 1 and hit the submit button.
-</string>
-     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_8">
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="label">
+        <property name="minimumSize">
+         <size>
+          <width>600</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;The prices have changed, and so has your investment value!&lt;/p&gt;&lt;p&gt;Reallocate your investment:&lt;/p&gt;&lt;p&gt;Set the slider to 75% in Asset 2 and 25% in Asset 1.&lt;/p&gt;&lt;p&gt;Click the Submit Allocation button.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="wordWrap">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer_5">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
     </widget>
    </item>
   </layout>
