Added a user-friendly investment slider with asset 1 on the left even!
Introduced a new .ui class to stop duplication across the various windows,
this necessitated refactoring a few items.

--- a/MarketSimulation/decryptionwindow.ui
+++ b/MarketSimulation/decryptionwindow.ui
@@ -48,7 +48,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QGroupBox" name="groupBox">
+        <widget class="QGroupBox" name="keyBox">
          <property name="enabled">
           <bool>true</bool>
          </property>
